--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,7 +108,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="40dp"
         android:backgroundTint="#F5901A"
-        android:text="Sign In"
+        android:text="@string/sign_in"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/dongle_light"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.82"
@@ -134,7 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/dongle"
-        android:text="Don't have an account?"
+        android:text="@string/don_t_have_an_account"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.36"
@@ -148,7 +148,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/dongle"
-        android:text=" Sign up here"
+        android:text="@string/sign_up_here"
         android:textColor="#F48F1A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
