--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -40,7 +40,7 @@
             android:layout_height="35dp"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/dongle"
-            android:text="Category"
+            android:text="@string/category"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@id/txtStatus"
@@ -55,7 +55,7 @@
             android:gravity="center"
             android:fontFamily="@font/dongle"
             android:background="@drawable/status_red"
-            android:text="Critical"
+            android:text="@string/critical"
             android:textSize="12sp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
