--- a/app/src/main/res/layout/donation_details.xml
+++ b/app/src/main/res/layout/donation_details.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/dongle"
-            android:text="Input Information"
+            android:text="@string/input_information"
             android:textColor="@android:color/black"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/dongle"
-            android:text="Step 2"
+            android:text="@string/step_2"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/txtHeader"
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dongle"
-                    android:text="FOOD"
+                    android:text="@string/food"
                     android:textColor="@android:color/black"
                     android:textSize="32sp"
                     android:textStyle="bold" />
@@ -98,7 +98,7 @@
                     android:paddingTop="2dp"
                     android:paddingEnd="8dp"
                     android:paddingBottom="2dp"
-                    android:text="Critical"
+                    android:text="@string/critical"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
                     android:textSize="13sp" /> </LinearLayout>
@@ -132,7 +132,7 @@
             android:layout_marginEnd="20dp"
             android:backgroundTint="#27869B"
             android:fontFamily="@font/dongle"
-            android:text="+ Add Custom Item"
+            android:text="@string/add_custom_item"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textColorLink="#F3F0F0"
