--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -39,7 +39,7 @@
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="25dp"
             android:fontFamily="@font/dongle"
-            android:text="Small or great, your gift can’t wait. With food, medicine, and clothes you share, our barangay shows that we all care."
+            android:text="@string/small_or_great_your_gift_can_t_wait_with_food_medicine_and_clothes_you_share_our_barangay_shows_that_we_all_care"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -56,7 +56,7 @@
             android:backgroundTint="#27869B"
             android:paddingHorizontal="24dp"
             android:paddingVertical="8dp"
-            android:text="DONATE NOW"
+            android:text="@string/donate_now"
             android:textColor="@android:color/white"
             app:cornerRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
