--- a/app/src/main/res/layout/fragment_cash_upload_proof.xml
+++ b/app/src/main/res/layout/fragment_cash_upload_proof.xml
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Proof of Payment"
+                    android:text="@string/proof_of_payment"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Please upload a screenshot of your successful transaction."
+                    android:text="@string/please_upload_a_screenshot_of_your_successful_transaction"
                     android:textAlignment="center"
                     android:textColor="#444444"
                     android:textSize="22sp"
@@ -97,7 +97,7 @@
                     android:layout_height="250dp"
                     android:layout_marginTop="24dp"
                     android:background="#EEEEEE"
-                    android:contentDescription="Proof Preview"
+                    android:contentDescription="@string/proof_preview"
                     android:padding="50dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_home_placeholder"
@@ -112,7 +112,7 @@
                     android:layout_height="55dp"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Upload Image"
+                    android:text="@string/upload_image"
                     android:textColor="#27869B"
                     android:textSize="24sp"
                     app:cornerRadius="8dp"
@@ -131,7 +131,7 @@
                     android:layout_marginBottom="24dp"
                     android:backgroundTint="#F5901A"
                     android:fontFamily="@font/dongle"
-                    android:text="Submit Verification"
+                    android:text="@string/submit_verification"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:cornerRadius="8dp"
