--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dongle"
-                android:text="Old password"
+                android:text="@string/old_password"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -62,7 +62,7 @@
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_field"
                     android:fontFamily="@font/dongle"
-                    android:hint="Enter old password"
+                    android:hint="@string/enter_old_password"
                     android:inputType="textPassword"
                     android:paddingStart="16dp"
                     android:textSize="18sp" />
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/dongle"
-                android:text="New password"
+                android:text="@string/new_password"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -91,7 +91,7 @@
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_field"
                     android:fontFamily="@font/dongle"
-                    android:hint="Enter new password"
+                    android:hint="@string/enter_new_password"
                     android:inputType="textPassword"
                     android:paddingStart="16dp"
                     android:textSize="18sp" />
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/dongle"
-                android:text="Confirm new password"
+                android:text="@string/confirm_new_password"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -120,7 +120,7 @@
                     android:layout_height="50dp"
                     android:background="@drawable/bg_input_field"
                     android:fontFamily="@font/dongle"
-                    android:hint="Confirm new password"
+                    android:hint="@string/confirm_new_password"
                     android:inputType="textPassword"
                     android:paddingStart="16dp"
                     android:textSize="18sp" />
@@ -138,7 +138,7 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="#27869B"
         android:fontFamily="@font/dongle"
-        android:text="Update password"
+        android:text="@string/update_password"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:cornerRadius="8dp"
