--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="24dp"
         android:fontFamily="@font/dongle"
-        android:text="DASHBOARD"
+        android:text="@string/dashboard"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -75,7 +75,7 @@
                         android:id="@+id/tv_card1_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Relief Goods Status"
+                        android:text="@string/relief_goods_status"
                         android:fontFamily="@font/dongle"
                         android:textSize="22sp"
                         android:textStyle="bold"
@@ -112,7 +112,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Low Stock"
+                            android:text="@string/low_stock"
                             android:textColor="#FF5252"
                             android:textStyle="bold"
                             android:textSize="12sp"/>
@@ -181,7 +181,7 @@
                         android:id="@+id/tv_card2_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Affected Areas by Disaster"
+                        android:text="@string/affected_areas_by_disaster"
                         android:fontFamily="@font/dongle"
                         android:textSize="22sp"
                         android:textStyle="bold"
@@ -258,7 +258,7 @@
                         android:id="@+id/tv_card3_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Registered Family"
+                        android:text="@string/registered_family"
                         android:fontFamily="@font/dongle"
                         android:textSize="22sp"
                         android:textStyle="bold"
@@ -282,7 +282,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="of total population"
+                        android:text="@string/of_total_population"
                         android:textSize="12sp"
                         android:textColor="#666666"
                         app:layout_constraintStart_toStartOf="parent"
@@ -318,7 +318,7 @@
                         android:id="@+id/tv_card4_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Donation Trends"
+                        android:text="@string/donation_trends"
                         android:fontFamily="@font/dongle"
                         android:textSize="22sp"
                         android:textStyle="bold"
