--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/welcome_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="WELCOME! JUAN M. DELA CRUZ"
+                android:text="@string/welcome_juan_m_dela_cruz"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -49,7 +49,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/rounded_search_background"
                 android:drawableStart="@drawable/ic_search"
-                android:hint="Search What's Happening..."
+                android:hint="@string/search_what_s_happening"
                 android:paddingStart="16dp"
 
                 android:paddingEnd="12dp"
@@ -64,7 +64,7 @@
             android:id="@+id/txtUrgentNeedsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="URGENT NEEDS"
+            android:text="@string/urgent_needs"
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
