--- a/app/src/main/res/layout/fragment_sign_up_id_confirmation.xml
+++ b/app/src/main/res/layout/fragment_sign_up_id_confirmation.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="90dp"
                     android:fontFamily="@font/dongle"
-                    android:text="ID Verification"
+                    android:text="@string/id_verification"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -86,7 +86,7 @@
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
                     android:gravity="center"
-                    android:text="Align your ID, keep it steady in good light,\nthen tap Scan."
+                    android:text="@string/align_your_id_keep_it_steady_in_good_light_then_tap_scan"
                     android:textColor="#444444"
                     android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
                     android:layout_marginBottom="40dp"
                     android:backgroundTint="#27869B"
                     android:fontFamily="@font/dongle"
-                    android:text="Scan"
+                    android:text="@string/scan"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:cornerRadius="8dp"
@@ -134,7 +134,7 @@
                         android:layout_marginEnd="8dp"
                         android:layout_weight="1"
                         android:fontFamily="@font/dongle"
-                        android:text="Retake"
+                        android:text="@string/retake"
                         android:textColor="#27869B"
                         android:textSize="22sp"
                         app:cornerRadius="8dp"
@@ -148,7 +148,7 @@
                         android:layout_weight="1"
                         android:backgroundTint="#F5901A"
                         android:fontFamily="@font/dongle"
-                        android:text="Submit"
+                        android:text="@string/submit"
                         android:textColor="@color/white"
                         android:textSize="22sp"
                         app:cornerRadius="8dp" />
