--- a/app/src/main/res/layout/fragment_sign_up_otp.xml
+++ b/app/src/main/res/layout/fragment_sign_up_otp.xml
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Enter Verification Code"
+                    android:text="@string/enter_verification_code"
                     android:textColor="@color/black"
                     android:textSize="28sp"
                     android:textStyle="bold"
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="We've sent a code to juandelacruz@email.com"
+                    android:text="@string/we_ve_sent_a_code_to_juandelacruz_email_com"
                     android:textColor="#666666"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="The code will expire in 04:59"
+                    android:text="@string/the_code_will_expire_in_04_59"
                     android:textColor="#666666"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Didn't get a code? Click to resend."
+                    android:text="@string/didn_t_get_a_code_click_to_resend"
                     android:textColor="#333333"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -173,7 +173,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
                     android:backgroundTint="#27869B"
-                    android:text="← Previous"
+                    android:text="@string/previous1"
                     android:textColor="@color/white"
                     app:cornerRadius="6dp"
                     app:layout_constraintBottom_toBottomOf="parent"
