--- a/app/src/main/res/layout/fragment_sign_up_step2_household.xml
+++ b/app/src/main/res/layout/fragment_sign_up_step2_household.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:fontFamily="@font/dongle"
-                    android:text="CREATE ACCOUNT"
+                    android:text="@string/create_account"
                     android:textColor="@color/black"
                     android:textSize="40sp"
                     android:textStyle="bold"
@@ -84,7 +84,7 @@
                     android:drawableStart="@drawable/ic_check"
                     android:drawablePadding="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Household Information"
+                    android:text="@string/household_information"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -97,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Household Number"
+                    android:text="@string/household_number"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Enter your household number"
+                    android:text="@string/enter_your_household_number"
                     android:textColor="#999999"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +140,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Specify household member gender and age"
+                    android:text="@string/specify_household_member_gender_and_age"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -189,7 +189,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:backgroundTint="#27869B"
-                        android:text="← Previous"
+                        android:text="@string/previous1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
 
@@ -198,7 +198,7 @@
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#27869B"
-                        android:text="Next →"
+                        android:text="@string/next1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
                 </LinearLayout>
