--- a/app/src/main/res/layout/fragment_sign_up_step3_location.xml
+++ b/app/src/main/res/layout/fragment_sign_up_step3_location.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:fontFamily="@font/dongle"
-                    android:text="CREATE ACCOUNT"
+                    android:text="@string/create_account"
                     android:textColor="@color/black"
                     android:textSize="40sp"
                     android:textStyle="bold"
@@ -86,7 +86,7 @@
                     android:drawableStart="@drawable/ic_check"
                     android:drawablePadding="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Location Information"
+                    android:text="@string/location_information"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -98,7 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dongle"
-                    android:text="Province"
+                    android:text="@string/province"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -127,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="City/Municipality"
+                    android:text="@string/city_municipality"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -156,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Barangay"
+                    android:text="@string/barangay"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Street"
+                    android:text="@string/street"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -240,7 +240,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:backgroundTint="#27869B"
-                        android:text="← Previous"
+                        android:text="@string/previous1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
 
@@ -249,7 +249,7 @@
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#27859A"
-                        android:text="Next →"
+                        android:text="@string/next1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
                 </LinearLayout>
