--- a/app/src/main/res/layout/fragment_sign_up_valid_id.xml
+++ b/app/src/main/res/layout/fragment_sign_up_valid_id.xml
@@ -65,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="90dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Valid ID"
+                    android:text="@string/valid_id"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -78,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Select the type of ID you'll be using"
+                    android:text="@string/select_the_type_of_id_you_ll_be_using"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -134,7 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Scan ID"
+                    android:text="@string/scan_id"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Take a clear photo of your selected ID"
+                    android:text="@string/take_a_clear_photo_of_your_selected_id"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -161,7 +161,7 @@
                     android:layout_marginTop="24dp"
                     android:backgroundTint="#27869B"
                     android:fontFamily="@font/dongle"
-                    android:text="Start Scan"
+                    android:text="@string/start_scan"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:cornerRadius="8dp"
@@ -192,7 +192,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
                     android:backgroundTint="#27869B"
-                    android:text="← Previous"
+                    android:text="@string/previous1"
                     android:textColor="@color/white"
                     app:cornerRadius="6dp"
                     app:layout_constraintBottom_toBottomOf="parent"
