--- a/app/src/main/res/layout/fragment_sign_up_verification_pending.xml
+++ b/app/src/main/res/layout/fragment_sign_up_verification_pending.xml
@@ -53,7 +53,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="168dp"
-                android:contentDescription="Verification Pending"
+                android:contentDescription="@string/verification_pending"
                 android:src="@drawable/ic_clock_outline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/dongle"
-                android:text="We're verifying your identity"
+                android:text="@string/we_re_verifying_your_identity"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="28sp"
@@ -81,7 +81,7 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/dongle"
                 android:lineSpacingExtra="4dp"
-                android:text="You may log in while verification is processed\nwithin 24 hours"
+                android:text="@string/you_may_log_in_while_verification_is_processed_within_24_hours"
                 android:textAlignment="center"
                 android:textColor="#444444"
                 android:textSize="20sp"
@@ -96,7 +96,7 @@
                 android:layout_marginBottom="50dp"
                 android:backgroundTint="#27869B"
                 android:fontFamily="@font/dongle"
-                android:text="Confirm"
+                android:text="@string/confirm"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:cornerRadius="8dp"
