--- a/app/src/main/res/layout/item_input_desc.xml
+++ b/app/src/main/res/layout/item_input_desc.xml
@@ -20,7 +20,7 @@
             android:id="@+id/txtItemName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Body Care"
+            android:text="@string/body_care"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
             android:id="@+id/txtItemDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="e.g. Soap, shampoo, toothbrush"
+            android:text="@string/e_g_soap_shampoo_toothbrush"
             android:textSize="12sp"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="parent"
