--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/tv_notif_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Application Decline"
+                    android:text="@string/application_decline"
                     android:fontFamily="@font/dongle"
                     android:textStyle="bold"
                     android:textSize="20sp"
@@ -50,7 +50,7 @@
                     android:id="@+id/tv_notif_desc_short"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Description..."
+                    android:text="@string/description"
                     android:textSize="12sp"
                     android:textColor="#666666"
                     android:maxLines="1"
@@ -82,7 +82,7 @@
                 android:id="@+id/tv_notif_desc_full"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Thank you for your application. Unfortunately, we were unable to approve your application due to issues with your submitted ID..."
+                android:text="@string/thank_you_for_your_application_unfortunately_we_were_unable_to_approve_your_application_due_to_issues_with_your_submitted_id"
                 android:textSize="14sp"
                 android:textColor="#444444"
                 android:lineSpacingExtra="4dp"/>
