--- a/app/src/main/res/layout/fragment_display_qr.xml
+++ b/app/src/main/res/layout/fragment_display_qr.xml
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Scan QR Code"
+                    android:text="@string/scan_qr_code"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -77,7 +77,7 @@
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/dongle"
                     android:gravity="center"
-                    android:text="Present this code for scanning to claim\nyour relief assistance."
+                    android:text="@string/present_this_code_for_scanning_to_claim_your_relief_assistance"
                     android:textColor="#666666"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
                     android:layout_marginBottom="50dp"
                     android:backgroundTint="#27869B"
                     android:fontFamily="@font/dongle"
-                    android:text="Save to Gallery"
+                    android:text="@string/save_to_gallery"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     app:cornerRadius="8dp"
