--- a/app/src/main/res/layout/fragment_donation_options.xml
+++ b/app/src/main/res/layout/fragment_donation_options.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/dongle"
-            android:text="Select Categories"
+            android:text="@string/select_categories"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +45,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="24dp"
             android:fontFamily="@font/dongle"
-            android:text="Step 1"
+            android:text="@string/step_1"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
