--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="24dp"
         android:fontFamily="@font/dongle"
-        android:text="NOTIFICATIONS"
+        android:text="@string/notifications"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Earlier"
+                android:text="@string/earlier"
                 android:textStyle="bold"
                 android:layout_marginStart="24dp"
                 android:layout_marginBottom="8dp"/>
@@ -52,7 +52,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Yesterday"
+                android:text="@string/yesterday"
                 android:textStyle="bold"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
-                android:text="See previous notifications"
+                android:text="@string/see_previous_notifications"
                 android:backgroundTint="#27869B"/>
 
         </LinearLayout>
