--- a/app/src/main/res/layout/fragment_notification_detail.xml
+++ b/app/src/main/res/layout/fragment_notification_detail.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/dongle"
-        android:text="NOTIFICATIONS"
+        android:text="@string/notifications"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -98,7 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="Application Decline - Invalid ID Submitted"
+                    android:text="@string/application_decline_invalid_id_submitted"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="16sp"/>
