--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="64dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Thank you for your support."
+                    android:text="@string/thank_you_for_your_support"
                     android:textAlignment="center"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -47,7 +47,7 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Donation recorded. Proceed to the barangay and present your Reference No."
+                    android:text="@string/donation_recorded_proceed_to_the_barangay_and_present_your_reference_no"
                     android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
                     android:layout_marginTop="52dp"
                     android:layout_marginEnd="66dp"
                     android:fontFamily="@font/dongle"
-                    android:text="REFERENCE NO.:"
+                    android:text="@string/reference_no"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/txtReference"
