--- a/app/src/main/res/layout/fragment_sign_up_options.xml
+++ b/app/src/main/res/layout/fragment_sign_up_options.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="130dp"
                 android:fontFamily="@font/dongle"
-                android:text="CHOOSE YOUR USER TYPE TO CONTINUE:"
+                android:text="@string/choose_your_user_type_to_continue"
                 android:textColor="#000000"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -73,11 +73,11 @@
 
                 android:background="@drawable/bg_option_unselected"
 
-                android:drawableStart="@drawable/ic_ppl"
+                android:drawableStart="@drawable/ic_local_community"
                 android:drawablePadding="16dp"
 
                 android:lines="2"
-                android:text="Local Community"
+                android:text="@string/local_community"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_options_title" />
@@ -93,11 +93,11 @@
 
                 android:background="@drawable/bg_option_unselected"
 
-                android:drawableStart="@drawable/ic_glob"
+                android:drawableStart="@drawable/ic_overseas_donor"
                 android:drawablePadding="16dp"
 
                 android:lines="2"
-                android:text="Overseas Donor"
+                android:text="@string/overseas_donor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_local_community" />
@@ -132,7 +132,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:backgroundTint="#27869B"
-                        android:text="← Previous"
+                        android:text="@string/previous1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
 
@@ -141,7 +141,7 @@
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#27869B"
-                        android:text="Next →"
+                        android:text="@string/next1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
 
