--- a/app/src/main/res/layout/fragment_sign_up_resident.xml
+++ b/app/src/main/res/layout/fragment_sign_up_resident.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="130dp"
                 android:fontFamily="@font/dongle"
-                android:text="ARE YOU A RESIDENT OF THIS BARANGAY?"
+                android:text="@string/are_you_a_resident_of_this_barangay"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="24sp"
@@ -71,7 +71,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="Resident"
+                android:text="@string/resident"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:text="Non-Resident"
+                android:text="@string/non_resident"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="#27869B"
-                    android:text="← Previous"
+                    android:text="@string/previous1"
                     android:textColor="@color/white"
                     app:cornerRadius="6dp" />
 
@@ -120,7 +120,7 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#27869B"
-                    android:text="Next →"
+                    android:text="@string/next1"
                     android:textColor="@color/white"
                     app:cornerRadius="6dp" />
             </LinearLayout>
