--- a/app/src/main/res/layout/fragment_sign_up_step_account.xml
+++ b/app/src/main/res/layout/fragment_sign_up_step_account.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:fontFamily="@font/dongle"
-                    android:text="CREATE ACCOUNT"
+                    android:text="@string/create_account"
                     android:textColor="@color/black"
                     android:textSize="40sp"
                     android:textStyle="bold"
@@ -84,7 +84,7 @@
                     android:drawableStart="@drawable/ic_check"
                     android:drawablePadding="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Account Information"
+                    android:text="@string/account_information"
                     android:textColor="@color/black"
                     android:textSize="32sp"
                     android:textStyle="bold"
@@ -96,7 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dongle"
-                    android:text="Email Address"
+                    android:text="@string/email_address"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -126,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/dongle"
-                    android:text="We'll send updates to this email"
+                    android:text="@string/we_ll_send_updates_to_this_email"
                     android:textColor="#999999"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Create Password"
+                    android:text="@string/create_password"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -154,7 +154,7 @@
                     android:drawableStart="@drawable/ic_lock_placeholder"
                     android:drawablePadding="12dp"
                     android:fontFamily="@font/dongle"
-                    android:hint="Create your password"
+                    android:hint="@string/create_your_password"
                     android:inputType="textPassword"
                     android:paddingStart="16dp"
                     android:textSize="20sp"
@@ -168,7 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/dongle"
-                    android:text="Confirm Password"
+                    android:text="@string/confirm_password"
                     android:textColor="#444444"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -184,7 +184,7 @@
                     android:drawableStart="@drawable/ic_lock_placeholder"
                     android:drawablePadding="12dp"
                     android:fontFamily="@font/dongle"
-                    android:hint="Confirm your password"
+                    android:hint="@string/confirm_your_password"
                     android:inputType="textPassword"
                     android:paddingStart="16dp"
                     android:textSize="20sp"
@@ -199,7 +199,7 @@
                     android:layout_marginTop="8dp"
                     android:buttonTint="#F5901A"
                     android:fontFamily="@font/dongle"
-                    android:text="I have read and agree to the Terms and Conditions."
+                    android:text="@string/i_have_read_and_agree_to_the_terms_and_conditions"
                     android:textColor="#999999"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -237,7 +237,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:backgroundTint="#27869B"
-                        android:text="← Previous"
+                        android:text="@string/previous1"
                         android:textColor="@color/white"
                         app:cornerRadius="6dp" />
 
@@ -246,7 +246,7 @@
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#27869B"
-                        android:text="Next →"
+                        android:text="@string/next1"
                         android:textColor="@color/white"
 
                         app:cornerRadius="6dp" />
