--- a/app/src/main/res/layout/fragment_suggestion_form.xml
+++ b/app/src/main/res/layout/fragment_suggestion_form.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/dongle"
-                android:text="We Value Your Suggestions"
+                android:text="@string/we_value_your_suggestions"
                 android:textColor="@color/black"
                 android:textSize="28sp"
                 android:textStyle="bold" />
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/dongle"
-                android:text="Help us improve our relief efforts by sharing your thoughts."
+                android:text="@string/help_us_improve_our_relief_efforts_by_sharing_your_thoughts"
                 android:textColor="#666666"
                 android:textSize="20sp" />
 
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/dongle"
-                        android:text="Share your idea here..."
+                        android:text="@string/share_your_idea_here"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -114,7 +114,7 @@
                 android:layout_marginBottom="40dp"
                 android:backgroundTint="#27869B"
                 android:fontFamily="@font/dongle"
-                android:text="Send Suggestion"
+                android:text="@string/send_suggestion"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:cornerRadius="8dp" />
