--- a/app/src/main/res/layout/item_household_member.xml
+++ b/app/src/main/res/layout/item_household_member.xml
@@ -41,7 +41,7 @@
             android:background="@null"
             android:fontFamily="@font/dongle"
             android:gravity="center"
-            android:hint="Age"
+            android:hint="@string/age"
             android:imeOptions="actionNext"
             android:inputType="number"
             android:maxLength="3"
